--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@astrojs/rss": "^4.0.11",
 		"@astrojs/sitemap": "^3.2.1",
 		"@astrojs/tailwind": "^5.1.5",
+		"@fontsource-variable/source-serif-4": "^5.1.1",
 		"@types/react": "^19.0.7",
 		"@types/react-dom": "^19.0.3",
 		"astro": "^5.1.8",
