--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"eslint-plugin-astro": "^1.3.1",
 		"eslint-plugin-jsx-a11y": "^6.10.2",
 		"eslint-plugin-perfectionist": "^4.7.0",
-		"prettier": "^3.4.2"
+		"prettier": "^3.4.2",
+		"prettier-plugin-astro": "^0.14.1"
 	}
 }
