--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"tailwindcss": "^3.4.17"
 	},
 	"devDependencies": {
+		"@tailwindcss/typography": "^0.5.16",
 		"@typescript-eslint/parser": "^8.21.0",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
