--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"eslint-plugin-jsx-a11y": "^6.10.2",
 		"eslint-plugin-perfectionist": "^4.7.0",
 		"prettier": "^3.4.2",
-		"prettier-plugin-astro": "^0.14.1"
+		"prettier-plugin-astro": "^0.14.1",
+		"typescript": "^5.7.3"
 	}
 }
