--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
 		"astro": "^5.1.8",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
-		"tailwindcss": "^3.4.17"
+		"sharp": "^0.33.5",
+		"tailwindcss": "^3.4.17",
+		"thumbhash": "^0.1.1"
 	},
 	"devDependencies": {
 		"@tailwindcss/typography": "^0.5.16",
