--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@astrojs/sitemap": "^3.2.1",
 		"@astrojs/tailwind": "^5.1.5",
 		"@fontsource-variable/source-serif-4": "^5.1.1",
+		"@tailwindcss/typography": "^0.5.16",
 		"@types/react-dom": "^19.0.3",
 		"astro": "^5.1.8",
 		"sharp": "^0.33.5",
@@ -23,8 +24,8 @@
 		"thumbhash": "^0.1.1"
 	},
 	"devDependencies": {
-		"@tailwindcss/typography": "^0.5.16",
-		"@typescript-eslint/parser": "^8.21.0",
+		"@eslint/js": "^9.19.0",
+		"@types/eslint-config-prettier": "^6.11.3",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-astro": "^1.3.1",
@@ -32,7 +33,8 @@
 		"eslint-plugin-perfectionist": "^4.7.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-astro": "^0.14.1",
-		"typescript": "^5.7.3"
+		"typescript": "^5.7.3",
+		"typescript-eslint": "^8.22.0"
 	},
 	"volta": {
 		"node": "22.13.1"
