--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@tailwindcss/typography": "^0.5.16",
 		"@types/react-dom": "^19.0.3",
 		"astro": "^5.1.10",
+		"astro-page-insight": "^0.10.0",
 		"sharp": "^0.33.5",
 		"tailwindcss": "^3.4.17",
 		"thumbhash": "^0.1.1"
