enhance layout structure and accessibility; add robots.txt generation and update component styles

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,12 @@
 		"typescript", // Enable .ts
 		"typescriptreact" // Enable .tsx
 	],
-	"typescript.tsdk": "node_modules/typescript/lib"
+	"typescript.tsdk": "node_modules/typescript/lib",
+	"[choicescript]": {
+		"editor.quickSuggestions": {
+			"comments": false,
+			"strings": false,
+			"other": false
+		}
+	}
 }
