--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"build": "astro build",
 		"preview": "astro preview",
 		"astro": "astro",
-		"lint": "eslint ."
+		"lint": "eslint .",
+		"a11y": "pa11y-ci --sitemap http://localhost:4321/sitemap-index.xml"
 	},
 	"dependencies": {
 		"@astrojs/mdx": "^4.0.7",
@@ -32,6 +33,7 @@
 		"eslint-plugin-astro": "^1.3.1",
 		"eslint-plugin-jsx-a11y": "^6.10.2",
 		"eslint-plugin-perfectionist": "^4.7.0",
+		"pa11y-ci": "^3.1.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-astro": "^0.14.1",
 		"typescript": "^5.7.3",
