add linting step to pa11y workflow for code quality checks

--- a/.github/workflows/pa11y.yml
+++ b/.github/workflows/pa11y.yml
@@ -18,9 +18,11 @@ jobs:
           with:
             cache: 'pnpm'
 
-
         - name: Install dependencies
           run: pnpm install
+
+        - name: Lint the code
+          run: pnpm run lint
 
         - name: Build sites
           run: pnpm run build --site http://localhost:4321
