fix: suppress a11y test output in workflow to reduce log clutter

--- a/.github/workflows/pa11y.yml
+++ b/.github/workflows/pa11y.yml
@@ -34,7 +34,7 @@ jobs:
           run: pnpm run preview &
 
         - name: Run a11y tests
-          run: pnpm run a11y 2>&1 | tee pa11y_output.txt
+          run: pnpm run a11y 2>/dev/null | tee pa11y_output.txt
 
         - name: Read pa11y_output file.
           id: pa11y_output
