--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"pa11y-ci": "^3.1.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-astro": "^0.14.1",
+		"prettier-plugin-tailwindcss": "^0.6.11",
 		"typescript": "^5.7.3",
 		"typescript-eslint": "^8.22.0"
 	},
