--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
 		"prettier-plugin-astro": "^0.14.1",
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"typescript": "^5.7.3",
-		"typescript-eslint": "^8.22.0",
-		"vite": "^6.2.1"
+		"typescript-eslint": "^8.22.0"
 	},
 	"volta": {
 		"node": "22.13.1"
