--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"@types/react-dom": "^19.0.3",
 		"astro": "^5.3.1",
 		"astro-page-insight": "^0.10.0",
-		"astro-pagefind": "^1.8.0",
+		"pagefind": "^1.3.0",
 		"sharp": "^0.33.5",
 		"tailwindcss": "^4.0.1",
 		"thumbhash": "^0.1.1"
