switch to mise-en-place over volta

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,8 @@
 			"strings": false,
 			"other": false
 		}
+	},
+	"debug.javascript.defaultRuntimeExecutable": {
+		"pwa-node": "/Users/echo/.local/share/mise/shims/node"
 	}
 }
