--- a/package.json
+++ b/package.json
@@ -12,34 +12,35 @@
 		"a11y": "pa11y-ci --sitemap http://localhost:4321/sitemap-index.xml"
 	},
 	"dependencies": {
-		"@astrojs/mdx": "^4.0.8",
+		"@astrojs/mdx": "^4.2.3",
 		"@astrojs/rss": "^4.0.11",
-		"@astrojs/sitemap": "^3.2.1",
-		"@fontsource-variable/source-serif-4": "^5.1.1",
-		"@types/react-dom": "^19.0.3",
-		"astro": "^5.3.1",
-		"astro-page-insight": "^0.10.0",
-		"sharp": "^0.33.5",
-		"tailwindcss": "^4.0.1",
+		"@astrojs/sitemap": "^3.3.0",
+		"@fontsource-variable/source-serif-4": "^5.2.6",
+		"@types/react-dom": "^19.1.1",
+		"astro": "^5.6.1",
+		"astro-page-insight": "^0.10.1",
+		"sharp": "^0.34.1",
+		"tailwindcss": "^4.1.3",
 		"thumbhash": "^0.1.1"
 	},
 	"devDependencies": {
-		"@eslint/js": "^9.19.0",
-		"@tailwindcss/vite": "^4.0.1",
+		"@eslint/js": "^9.24.0",
+		"@tailwindcss/vite": "^4.1.3",
 		"@types/eslint-config-prettier": "^6.11.3",
-		"eslint": "^9.19.0",
-		"eslint-config-prettier": "^10.0.1",
+		"eslint": "^9.24.0",
+		"eslint-config-prettier": "^10.1.1",
 		"eslint-plugin-astro": "^1.3.1",
 		"eslint-plugin-jsx-a11y": "^6.10.2",
-		"eslint-plugin-perfectionist": "^4.7.0",
+		"eslint-plugin-perfectionist": "^4.11.0",
 		"pa11y-ci": "^3.1.0",
-		"prettier": "^3.4.2",
+		"prettier": "^3.5.3",
 		"prettier-plugin-astro": "^0.14.1",
 		"prettier-plugin-tailwindcss": "^0.6.11",
-		"typescript": "^5.7.3",
-		"typescript-eslint": "^8.22.0"
+		"typescript": "^5.8.3",
+		"typescript-eslint": "^8.29.1"
 	},
 	"overrides": {
-		"ajv": "^8.17.1"
+		"ajv": "^8.17.1",
+		"semver": "^7.6.3"
 	}
 }
