--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
 		"dev": "astro dev",
 		"build": "astro build",
 		"preview": "astro preview",
-		"astro": "astro",
-		"lint": "eslint .",
+		"lint": "astro check && eslint .",
 		"a11y": "pa11y-ci --sitemap http://localhost:4321/sitemap-index.xml"
 	},
 	"dependencies": {
+		"@astrojs/check": "^0.9.4",
 		"@astrojs/mdx": "^4.2.3",
 		"@astrojs/rss": "^4.0.11",
 		"@astrojs/sitemap": "^3.3.0",
