--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
 	"name": "echonyc-blog",
 	"type": "module",
 	"version": "1.0.0",
-	"packageManager": "pnpm@9.15.4",
+	"packageManager": "pnpm@10.8.1",
+	"engines": {
+		"node": "24"
+	},
 	"scripts": {
 		"dev": "astro dev",
 		"build": "astro build",
