--- a/.github/workflows/pa11y.yml
+++ b/.github/workflows/pa11y.yml
@@ -30,19 +30,25 @@ jobs:
             - name: Build site
               run: pnpm run build --site http://localhost:4321
 
-            - name: Start preview server
-              run: pnpm run preview &
+            - name: Start preview server and run tests
+              run: |
+                  pnpm run preview &
+                  for i in {1..30}; do
+                    if curl -sf http://localhost:4321 > /dev/null; then
+                      break
+                    fi
+                    sleep 1
+                  done
+                  pnpm run a11y | tee pa11y_output.txt
+                  exit ${PIPESTATUS[0]}
 
-            - name: Run a11y tests
-              run: pnpm run a11y 2>/dev/null | tee pa11y_output.txt
-
-            - name: Read pa11y_output file.
+            - name: Read pa11y_output file
               id: pa11y_output
               uses: juliangruber/read-file-action@v1
               with:
                   path: ./pa11y_output.txt
 
-            - name: Comment on pull request.
+            - name: Post results in PR
               uses: thollander/actions-comment-pull-request@v3
               with:
                   message: |
@@ -54,9 +60,3 @@ jobs:
 
                       </details>
                   comment-tag: pa11y
-
-            - name: Check for pa11y failures.
-              if: ${{ contains(steps.pa11y_output.outputs.content, 'errno 2') }}
-              run: |
-                  echo "::error::The site is failing accessibility tests. Please review the comment in the pull request or the pa11y-ci step in the workflow for details."
-                  exit 1
