--- a/.github/workflows/pa11y.yml
+++ b/.github/workflows/pa11y.yml
@@ -31,7 +31,7 @@ jobs:
               run: pnpm run build --site http://localhost:4321
 
             - name: Start preview server
-              run: pnpm run preview &
+              run: pnpm run preview & sleep 4
 
             - name: Run a11y tests
               run: pnpm run a11y 2>/dev/null | tee pa11y_output.txt
