--- a/.github/workflows/pa11y.yml
+++ b/.github/workflows/pa11y.yml
@@ -31,7 +31,16 @@ jobs:
               run: pnpm run build --site http://localhost:4321
 
             - name: Start preview server
-              run: pnpm run preview & sleep 4
+              run: |
+                  pnpm run preview &
+                  for i in {1..30}; do
+                    if curl -sSf http://localhost:4321 > /dev/null; then
+                      echo "Server is up!"
+                      break
+                    fi
+                    echo "Waiting for server..."
+                    sleep 1
+                  done
 
             - name: Run a11y tests
               run: pnpm run a11y 2>/dev/null | tee pa11y_output.txt
