--- a/.github/workflows/pa11y.yml
+++ b/.github/workflows/pa11y.yml
@@ -43,7 +43,9 @@ jobs:
                   done
 
             - name: Run a11y tests
-              run: pnpm run a11y 2>/dev/null | tee pa11y_output.txt
+              run: |
+                  pnpm run a11y 2>/dev/null | tee pa11y_output.txt
+                  exit ${PIPESTATUS[0]}
 
             - name: Read pa11y_output file.
               id: pa11y_output
