--- a/.github/workflows/pa11y.yml
+++ b/.github/workflows/pa11y.yml
@@ -30,21 +30,18 @@ jobs:
             - name: Build site
               run: pnpm run build --site http://localhost:4321
 
-            - name: Start preview server
+            - name: Start preview server and run tests
               run: |
                   pnpm run preview &
                   for i in {1..30}; do
-                    if curl -sSf http://localhost:4321 > /dev/null; then
+                    if curl -sSf http://localhost:4321 2> /dev/null; then
                       echo "Server is up!"
                       break
                     fi
                     echo "Waiting for server..."
                     sleep 1
                   done
-
-            - name: Run a11y tests
-              run: |
-                  pnpm run a11y 2>/dev/null | tee pa11y_output.txt
+                  pnpm run a11y 2> /dev/null | tee pa11y_output.txt
                   exit ${PIPESTATUS[0]}
 
             - name: Read pa11y_output file.
