--- a/.github/workflows/pa11y.yml
+++ b/.github/workflows/pa11y.yml
@@ -22,7 +22,7 @@ jobs:
                   node-version-file: package.json
 
             - name: Install dependencies
-              run: pnpm install
+              run: pnpm approve-builds && pnpm install
 
             - name: Lint the code
               run: pnpm run lint
@@ -42,13 +42,13 @@ jobs:
                   pnpm run a11y | tee pa11y_output.txt
                   exit ${PIPESTATUS[0]}
 
-            - name: Read pa11y_output file.
+            - name: Read pa11y_output file
               id: pa11y_output
               uses: juliangruber/read-file-action@v1
               with:
                   path: ./pa11y_output.txt
 
-            - name: Comment on pull request.
+            - name: Post results in PR
               uses: thollander/actions-comment-pull-request@v3
               with:
                   message: |
@@ -60,9 +60,3 @@ jobs:
 
                       </details>
                   comment-tag: pa11y
-
-            - name: Check for pa11y failures.
-              if: ${{ contains(steps.pa11y_output.outputs.content, 'errno 2') }}
-              run: |
-                  echo "::error::The site is failing accessibility tests. Please review the comment in the pull request or the pa11y-ci step in the workflow for details."
-                  exit 1
