--- a/.github/workflows/pa11y.yml
+++ b/.github/workflows/pa11y.yml
@@ -22,7 +22,7 @@ jobs:
                   node-version-file: package.json
 
             - name: Install dependencies
-              run: pnpm install && pnpm approve-builds
+              run: pnpm install
 
             - name: Lint the code
               run: pnpm run lint
