--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 		"@astrojs/rss": "^4.0.11",
 		"@astrojs/sitemap": "^3.3.0",
 		"@fontsource-variable/source-serif-4": "^5.2.6",
-		"astro": "^5.15.9",
+		"astro": "^5.16.3",
 		"astro-page-insight": "^0.10.1",
 		"sharp": "^0.34.1",
 		"tailwindcss": "^4.1.3",
@@ -37,17 +37,17 @@
 		"@eslint/js": "^9.24.0",
 		"@tailwindcss/vite": "^4.1.3",
 		"@types/eslint-config-prettier": "^6.11.3",
-		"eslint": "^9.24.0",
+		"@typescript-eslint/parser": "^8.48.0",
+		"eslint": "^9.39.1",
 		"eslint-config-prettier": "^10.1.1",
-		"eslint-plugin-astro": "^1.3.1",
+		"eslint-plugin-astro": "^1.5.0",
 		"eslint-plugin-jsx-a11y": "^6.10.2",
-		"eslint-plugin-perfectionist": "^4.11.0",
+		"eslint-plugin-perfectionist": "^4.15.1",
 		"pa11y-ci": "^3.1.0",
 		"prettier": "^3.5.3",
 		"prettier-plugin-astro": "^0.14.1",
 		"prettier-plugin-tailwindcss": "^0.6.11",
-		"typescript": "^5.8.3",
-		"typescript-eslint": "^8.29.1"
+		"typescript": "^5.8.3"
 	},
 	"overrides": {
 		"ajv": "^8.17.1",
