--- a/package.json
+++ b/package.json
@@ -2,17 +2,10 @@
 	"name": "echonyc-blog",
 	"type": "module",
 	"version": "1.0.0",
-	"packageManager": "pnpm@10.8.1",
+	"packageManager": "yarn@4.12.0",
 	"engines": {
 		"node": "24",
-		"pnpm": ">=10"
-	},
-	"pnpm": {
-		"onlyBuiltDependencies": [
-			"esbuild",
-			"puppeteer",
-			"sharp"
-		]
+		"yarn": "^4.12"
 	},
 	"scripts": {
 		"dev": "astro dev",
