--- a/.github/workflows/pa11y.yml
+++ b/.github/workflows/pa11y.yml
@@ -12,34 +12,31 @@ jobs:
             - name: Checkout code
               uses: actions/checkout@v2
 
-            - name: Install PNPM
-              uses: pnpm/action-setup@v4
-
             - name: Install Node.js
               uses: actions/setup-node@v4
               with:
-                  cache: 'pnpm'
+                  cache: 'yarn'
                   node-version-file: package.json
 
             - name: Install dependencies
-              run: pnpm install
+              run: yarn install
 
             - name: Lint the code
-              run: pnpm run lint
+              run: yarn run lint
 
             - name: Build site
-              run: pnpm run build --site http://localhost:4321
+              run: yarn run build --site http://localhost:4321
 
             - name: Start preview server and run tests
               run: |
-                  pnpm run preview &
+                  yarn run preview &
                   for i in {1..30}; do
                     if curl -sf http://localhost:4321 > /dev/null; then
                       break
                     fi
                     sleep 1
                   done
-                  pnpm run a11y | tee pa11y_output.txt
+                  yarn run a11y | tee pa11y_output.txt
                   exit ${PIPESTATUS[0]}
 
             - name: Read pa11y_output file
