--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -24,5 +24,8 @@ jobs:
             - name: Install dependencies
               run: yarn install
 
+            - name: Check formatting
+              run: yarn prettier . --check
+
             - name: Lint the code
               run: yarn run lint
