--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@fontsource-variable/source-serif-4": "^5.2.6",
 		"astro": "^5.16.3",
 		"astro-page-insight": "^0.10.1",
+		"astro-seo-meta": "^5.2.0",
 		"sharp": "^0.34.1",
 		"tailwindcss": "^4.1.3",
 		"thumbhash": "^0.1.1"
